aos animations added and menu z-index fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body{
     display: inline-block;
     font-size: 1.5rem;
     padding: 1.5rem;
+    
 }
 
 .btn--primary{
@@ -147,6 +148,7 @@ background-repeat:no-repeat;
     position: fixed;
     display: inline-block;
     width: 100%;
+    z-index: 1000;
     
 }
 .menu .list__item:hover{
